fix menu on iphone

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1534,7 +1534,7 @@ h2
 				opacity: 0
 				transition: all 0.3s
 		&.opened
-			padding-bottom: 25px
+			padding-bottom: 50px
 			height: 100vh
 			overflow: scroll
 			position: fixed
@@ -2169,7 +2169,7 @@ h2
 				top: 28px
 				left: 75px
 		&.opened
-			padding-bottom: 12.5px
+			padding-bottom: 50px
 			.header__cart 
 				width: 120px
 				a 
